// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCategories should fire event when click on the categories 1`] = `
<View
  testID="heroCategory"
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        {
          "fontSize": 16,
          "fontWeight": "600",
          "marginBottom": 9,
        },
      ]
    }
    variant="titleLarge"
  >
    Test
  </Text>
  <View>
    <RCTScrollView
      data={
        [
          [
            {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test",
              "title": "test",
            },
            {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test2",
              "title": "test",
            },
          ],
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={true}
      initialNumToRender={4}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      testID="heroCategoriesList"
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            [
              {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest"
            >
              <View>
                <Image
                  source={
                    {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    [
                      {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      {
                        "textAlign": "left",
                      },
                      {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                  variant="labelMedium"
                >
                  test
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest2"
            >
              <View>
                <Image
                  source={
                    {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    [
                      {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      {
                        "textAlign": "left",
                      },
                      {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                  variant="labelMedium"
                >
                  test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`HeroCategories should render the item 1`] = `
<View
  testID="heroCategory"
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        {
          "textAlign": "left",
        },
        {
          "fontSize": 16,
          "fontWeight": "600",
          "marginBottom": 9,
        },
      ]
    }
    variant="titleLarge"
  >
    Test
  </Text>
  <View>
    <RCTScrollView
      data={
        [
          [
            {
              "image": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
              "key": "test",
              "title": "test",
            },
          ],
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={true}
      initialNumToRender={4}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      testID="heroCategoriesList"
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            [
              {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "column",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderRadius": 12,
                    "marginRight": 12,
                    "padding": 4,
                  },
                ]
              }
              testID="heroItemtest"
            >
              <View>
                <Image
                  source={
                    {
                      "height": 97,
                      "uri": "https://burst.shopifycdn.com/photos/tea-cup-with-hot-peppers-and-yellow-tomatoes-on-red.jpg?width=240&format=pjpg&exif=1&iptc=1",
                      "width": 97,
                    }
                  }
                  style={
                    {
                      "borderRadius": 48.5,
                    }
                  }
                />
                <Text
                  style={
                    [
                      {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      {
                        "textAlign": "left",
                      },
                      {
                        "fontWeight": "600",
                        "marginBottom": 12,
                        "marginTop": 6,
                        "textAlign": "center",
                      },
                    ]
                  }
                  variant="labelMedium"
                >
                  test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
